[package]
name = "bls-threshold-encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blsttc = "8.0.2"
eyre = "0.6.8"
env_logger = "0.10.0"
sn_sdkg = "3.1.2"
tokio = { version = "1.26.0", features = ["rt"] }
log = "0.4.17"
