[package]
name = "ferveo-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.3"
ark-ec = "0.3"
ark-std = "0.3"
ark-poly = "0.3"
ferveo = { path = "../../../nucypher_ferveo/ferveo" }
ferveo-common = { path = "../../../nucypher_ferveo/ferveo-common" }
itertools = "0.10.5"
tpke = { path = "../../../nucypher_ferveo/tpke", package = "group-threshold-cryptography" }
measure_time = "0.8"
