[package]
name = "ferveo-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-poly = "0.4"
ferveo = { git = "https://github.com/nucypher/ferveo", rev = "8fa25b6" }
ferveo-common = { git = "https://github.com/nucypher/ferveo", rev = "8fa25b6" }
tpke = { git = "https://github.com/nucypher/ferveo", rev = "8fa25b6", package = "group-threshold-cryptography", features = ["api"] }
itertools = "0.10.5"
measure_time = "0.8"
